syntax = "proto3";

import "google/protobuf/empty.proto";
import "swoq.proto";

package Swoq.Interface;

service DashboardService {
    rpc GetUpdates(google.protobuf.Empty) returns (stream Update);
}

message QuestStarted {
    string gameId = 1;
    string userName = 2;
    StartRequest request = 3;
    StartResponse response = 4;
}

message QuestActed {
    string gameId = 1;
    ActionRequest request = 2;
    ActionResponse response = 3;
}

message QueueUpdate {
    repeated string queuedUsers = 1;
}

message TrainingSession {
    string gameId = 1;
    string userName = 2;
    int32 level = 3;
    bool isActive = 4;
    bool isFinished = 5;
}

message TrainingUpdate {
    float eventsPerSecond = 1;
    repeated TrainingSession sessions = 2;
}

message Score {
    string userName = 1;
    int32 level = 2;
    int32 lengthTicks = 3;
    int32 lengthSeconds = 4;
}

message ScoresUpdate {
    repeated Score scores = 1;
}

message Update {
    optional QuestStarted questStarted = 1;
    optional QuestActed questActed = 2;
    optional QueueUpdate queueUpdate = 3;
    optional TrainingUpdate trainingUpdate = 4;
    optional ScoresUpdate scoresUpdate = 5;
}
